--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -1,43 +1,32 @@
 rules:
-  - id: 1
-    name: allow-management-to-all
-    source: Management
-    destination: any
-    action: allow
-    ports: [22, 80, 443]
-  - id: 2
-    name: allow-trusted-to-servers
-    source: TrustedDevices
-    destination: Servers
-    action: allow
-    ports: [22, 80, 443]
-  - id: 3
-    name: allow-voip-signaling
-    source: VoIP
-    destination: any
-    action: allow
-    ports: [5060, 5061]
-  - id: 4
-    name: allow-voip-rtp
-    source: VoIP
-    destination: any
-    action: allow
-    ports_range:
-      start: 10000
-      end: 20000
-  - id: 5
-    name: block-guestiot-to-lan
-    source: GuestIoT
-    destination: [Management, Servers, TrustedDevices]
-    action: drop
-  - id: 6
-    name: allow-guestiot-to-internet
-    source: GuestIoT
-    destination: internet
-    action: allow
-    ports: [80, 443]
-  - id: 7
-    name: default-drop-local
-    source: any
-    destination: local
-    action: drop
+  - description: "Management → Everywhere (controller + SSH)"
+    source: { network: "Management" }
+    destination: { type: "any" }
+    action: "accept"
+    ports: ["22","443","8443","161"]
+  - description: "trusted-devices → servers (DNS, AD, NFS, Influx)"
+    source: { network: "trusted-devices" }
+    destination: { network: "servers" }
+    action: "accept"
+    ports: ["53","88","389","636","2049","8086"]
+  - description: "trusted-devices → voip (SIP + RTP)"
+    source: { network: "trusted-devices" }
+    destination: { network: "voip" }
+    action: "accept"
+    ports: ["5060-5061","10000-20000"]
+  - description: "servers → osTicket (AI triage polling)"
+    source: { network: "servers", address: "10.0.10.60" }
+    destination: { address: "10.0.30.40", ports: ["80","443"] }
+    action: "accept"
+  - description: "voip → servers (FreePBX → AD auth)"
+    source: { network: "voip" }
+    destination: { network: "servers", ports: ["389","636"] }
+    action: "accept"
+  - description: "guest-iot → WAN only (block local)"
+    source: { network: "guest-iot" }
+    destination: { type: "internet" }
+    action: "accept"
+  - description: "guest-iot → local (drop everything else)"
+    source: { network: "guest-iot" }
+    destination: { type: "local" }
+    action: "drop"
