--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ description = "UniFi + AI helpdesk case study infrastructure-as-code"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.0",
+    "httpx>=0.27.0",
+    "ollama>=0.1.0",
+    "presidio-analyzer>=2.2.0",
+    "presidio-anonymizer>=2.2.0",
     "requests>=2.32.0,<3",
     "PyYAML>=6.0.0,<7",
     "pydantic>=2.6.0,<3",
