chore(policy,voip): annotate pending rule 8 expansion and VLAN 20 deprecation
- policy-table.yaml: add TODO to expand rule 8 per blueprint
- phone-reg-test.py: add TODO to confirm PBX API host (VLAN 20 → removed)

Refs: Expansion Blueprint v2

--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -30,3 +30,5 @@ rules:
     source: { network: "guest-iot" }
     destination: { type: "local" }
     action: "drop"
+  # TODO: clarify: Expand rule 8 with all ports exactly as specified in Expansion Blueprint v2.
+  # The current file ends at rule 7. Awaiting blueprint to add/modify rule 8 verbatim.
