--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -1,34 +1,57 @@
+---
 rules:
   - description: "Management → Everywhere (controller + SSH)"
-    source: { network: "Management" }
-    destination: { type: "any" }
+    source:
+      network: "Management"
+    destination:
+      type: "any"
     action: "accept"
-    ports: ["22","443","8443","161"]
+    ports: ["22", "443", "8443", "161"]
   - description: "trusted-devices → servers (DNS, AD, NFS, Influx)"
-    source: { network: "trusted-devices" }
-    destination: { network: "servers" }
+    source:
+      network: "trusted-devices"
+    destination:
+      network: "servers"
     action: "accept"
-    ports: ["53","88","389","636","2049","8086"]
+    ports: ["53", "88", "389", "636", "2049", "8086"]
   - description: "trusted-devices → voip (SIP + RTP)"
-    source: { network: "trusted-devices" }
-    destination: { network: "voip" }
+    source:
+      network: "trusted-devices"
+    destination:
+      network: "voip"
     action: "accept"
-    ports: ["5060-5061","10000-20000"]
+    ports: ["5060-5061", "10000-20000"]
   - description: "servers → osTicket (AI triage polling)"
-    source: { network: "servers", address: "10.0.10.60" }
-    destination: { address: "10.0.30.40", ports: ["80","443"] }
+    source:
+      network: "servers"
+      address: "10.0.10.60"
+    destination:
+      address: "10.0.30.40"
+      ports: ["80", "443"]
     action: "accept"
   - description: "voip → servers (FreePBX → AD auth)"
-    source: { network: "voip" }
-    destination: { network: "servers", ports: ["389","636"] }
+    source:
+      network: "voip"
+    destination:
+      network: "servers"
+      ports: ["389", "636"]
     action: "accept"
   - description: "guest-iot → WAN only (block local)"
-    source: { network: "guest-iot" }
-    destination: { type: "internet" }
+    source:
+      network: "guest-iot"
+    destination:
+      type: "internet"
     action: "accept"
   - description: "guest-iot → local (drop everything else)"
-    source: { network: "guest-iot" }
-    destination: { type: "local" }
+    source:
+      network: "guest-iot"
+    destination:
+      type: "local"
     action: "drop"
-  # TODO: clarify: Expand rule 8 with all ports exactly as specified in Expansion Blueprint v2.
-  # The current file ends at rule 7. Awaiting blueprint to add/modify rule 8 verbatim.
+  - description: "trusted-devices → rylan-dc (PXE + Domain Services)"
+    source:
+      network: "trusted-devices"
+    destination:
+      address: "10.0.30.10"
+      ports: ["53", "67", "68", "69", "88", "389", "636", "4011"]
+    action: "accept"
