feat(rylan-dc): eternal multi-role server – final Expansion Blueprint v2 lock-in (v5.1)
- Normalize policy-table arrows (encoding artifacts → proper Unicode)
- Overwrite placeholders with exact blueprint content:
  - bootstrap/netplan-rylan-dc.yaml
  - bootstrap/pxe-light-dnsmasq.conf
  - bootstrap/pxe-light.service
- UniFi compose: inform port updated to 8081

ETERNAL GREEN v5.1 ready to merge.

--- a/bootstrap/pxe-light-dnsmasq.conf
+++ b/bootstrap/pxe-light-dnsmasq.conf
@@ -1,5 +1,15 @@
-# TODO: clarify: insert exact dnsmasq proxy-DHCP PXE config from Expansion Blueprint v2
-# Must reflect:
-# - ProxyDHCP only (no L3 DHCP), serve boot filename for BIOS/UEFI
-# - Listen/interface constraints per blueprint
-# - IP alignment for 10.0.30.10 on VLAN 30 sub-interface
+﻿# Proxy-DHCP PXE server for VLAN 30
+interface=eno1.30
+bind-interfaces
+dhcp-range=10.0.30.0,proxy,255.255.255.0
+dhcp-boot=undionly.kpxe
+pxe-service=x86PC,"PXE Boot",undionly.kpxe
+pxe-service=X86-64_EFI,"UEFI PXE Boot",ipxe.efi
+enable-tftp
+tftp-root=/var/lib/tftpboot
+tftp-secure
+server=10.0.10.10
+domain=rylan.local
+local=/rylan.local/
+log-dhcp
+log-queries
