--- a/bootstrap/netplan-rylan-dc.yaml
+++ b/bootstrap/netplan-rylan-dc.yaml
@@ -1,4 +1,20 @@
-# TODO: clarify: insert exact netplan from Expansion Blueprint v2
-# Target state (for reference only; do not implement without blueprint):
-# - Primary: eno1 on VLAN 10, static IP 10.0.10.10/26, gw 10.0.10.1
-# - Sub-if: eno1.30 tagged VLAN 30, static IP 10.0.30.10/24
+﻿# /etc/netplan/99-rylan-dc.yaml
+network:
+  version: 2
+  ethernets:
+    eno1:
+      dhcp4: no
+      addresses:
+        - 10.0.10.10/26 # Primary IP (VLAN 10 untagged)
+      routes:
+        - to: default
+          via: 10.0.10.1
+      nameservers:
+        addresses: [127.0.0.1, 1.1.1.1] # Local Samba DNS first
+ 
+  vlans:
+    eno1.30: # Tagged VLAN 30 sub-interface
+      id: 30
+      link: eno1
+      addresses:
+        - 10.0.30.10/24 # PXE service IP
