--- a/bootstrap/pxe-light.service
+++ b/bootstrap/pxe-light.service
@@ -1,2 +1,14 @@
-# TODO: clarify: insert exact systemd unit from Expansion Blueprint v2
-# Service should manage lightweight dnsmasq proxy-DHCP for PXE per blueprint specifics.
+﻿[Unit]
+Description=Lightweight PXE Proxy-DHCP for VLAN 30
+After=network-online.target samba-ad-dc.service
+Wants=network-online.target
+[Service]
+Type=forking
+ExecStartPre=/bin/mkdir -p /var/lib/tftpboot
+ExecStart=/usr/sbin/dnsmasq -C /etc/dnsmasq.d/pxe-light.conf
+ExecReload=/bin/kill -HUP $MAINPID
+PIDFile=/run/dnsmasq-pxe.pid
+Restart=on-failure
+RestartSec=5
+[Install]
+WantedBy=multi-user.target
