--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiounifi==73.*
 pydantic==2.12.*
 fastapi==0.115.*
 uvicorn==0.30.*
+httpx==0.27.*
 presidio-analyzer==2.2.*
 ollama==0.3.*
 python-dotenv==1.0.*
