--- a/02-declarative-config/vlans.yaml
+++ b/02-declarative-config/vlans.yaml
@@ -1,15 +1,31 @@
-'''---
-network:
-  version: 2
-  renderer: networkd
-  ethernets:
-    enp4s0:
-      dhcp4: false
-      addresses:
-        - 10.0.10.10/26
-        - 10.0.30.10/24
-      routes:
-        - to: default
-          via: 10.0.10.1
-      nameservers:
-        addresses: [10.0.10.10, 1.1.1.1]
+vlans:
+  - id: 10
+    name: servers
+    subnet: 10.0.10.0/26
+    gateway: 10.0.10.1
+    dhcp_enabled: false
+    dns_servers: [10.0.10.10, 1.1.1.1]
+  - id: 30
+    name: trusted-devices
+    subnet: 10.0.30.0/24
+    gateway: 10.0.30.1
+    dhcp_enabled: true
+    dhcp_start: 10.0.30.100
+    dhcp_end: 10.0.30.200
+    dns_servers: [10.0.30.10, 10.0.10.10]
+  - id: 40
+    name: voip
+    subnet: 10.0.40.0/24
+    gateway: 10.0.40.1
+    dhcp_enabled: true
+    dhcp_start: 10.0.40.100
+    dhcp_end: 10.0.40.200
+    dns_servers: [10.0.10.10]
+  - id: 90
+    name: guest-iot
+    subnet: 10.0.90.0/24
+    gateway: 10.0.90.1
+    dhcp_enabled: true
+    dhcp_start: 10.0.90.100
+    dhcp_end: 10.0.90.200
+    dns_servers: [1.1.1.1, 1.0.0.1]
