--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -8,13 +8,14 @@ rules:
     action: "accept"
     ports: ["22", "443", "8443", "161"]
 
-  - description: "trusted-devices → servers (DNS, AD, NFS, Influx)"
+  - description: "trusted-devices → servers (DNS, AD, NFS, Influx, PXE)"
     source:
       network: "trusted-devices"
     destination:
       network: "servers"
     action: "accept"
-    ports: ["53", "88", "389", "636", "2049", "8086"]
+    ports: ["53", "67", "68", "69", "88", "389", "636", "2049", "4011", "8086"]
+    comment: "Consolidated server access including PXE boot (DHCP, TFTP, ProxyDHCP)"
 
   - description: "trusted-devices → voip (SIP + RTP)"
     source:
@@ -54,14 +55,6 @@ rules:
     destination:
       type: "local"
     action: "drop"
-
-  - description: "trusted-devices → rylan-dc (PXE + Domain Services)"
-    source:
-      network: "trusted-devices"
-    destination:
-      address: "10.0.30.10"
-      ports: ["53", "67", "68", "69", "88", "389", "636", "4011"]
-    action: "accept"
 
   - description: "trusted-devices → guest-iot (printer access only)"
     source:
