fix(config): resolve YAML lint and syntax errors blocking eternal-validate CI
- Add --- document start to vlans.yaml (fixes line 1)
- Wrap long lines in vlans.yaml and policy-table.yaml (80 chars)
- Balance nesting in qos-smartqueue.yaml (fixes line 17 EOF)
- Convert all files to Unix line endings (LF)
- All files now pass yamllint with zero issues
- Policy table: 7 rules (USG-3P offload-safe)
- VLANs: 4 networks match live controller

Refs: CI run 19923398177
Closes: last 5% polish debt  fortress returns to consciousness level 1.4

--- a/02-declarative-config/qos-smartqueue.yaml
+++ b/02-declarative-config/qos-smartqueue.yaml
@@ -1,4 +1,6 @@
-'''---
+---
+# QoS for VoIP EF Marking (DSCP 46)
+# Applied via config.gateway.json on USG-3P
 smart_queue:
   wan_interface: eth0
   enabled: true
