feat(iot): Prepare repo for IoT production run (v1.1.2)
- Updated inventory, vlans, policy-table, config.gateway for VLAN 95/96 and Denon hardwiring.
- New switch-profiles.yaml for US-8 Port 2.
- ADRs 013-015 for rationale.
- New runbooks and troubleshooting for junior deployability.
- Refs: Hellodeolu v4 (max 10 rules, 15-min RTO), Trinity (Carter identity in inventory, Bauer verify via audit, Suehring perimeter in policies).

Tested: Dry-run apply, guardian audit green (9/10 rules), pytest 100% (36/36).

--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -58,3 +58,21 @@ rules:
     destination:
       type: "local"
     action: "drop"
+
+  - description: "IoT-Isolated → Internet (Whitelist)"
+    source:
+      network: "iot-isolated"
+    destination:
+      type: "internet"
+    action: "accept"
+    ports: ["443", "8883"]
+    comment: "Traeger grill cloud access only (TLS + MQTT over TLS)"
+
+  - description: "IoT-Trusted → Streaming Services"
+    source:
+      network: "iot-trusted"
+    destination:
+      type: "internet"
+    action: "accept"
+    ports: ["80", "443"]
+    comment: "Denon HEOS soundbars - Spotify/Pandora/HEOS cloud"
