--- a/02-declarative-config/policy-table.yaml
+++ b/02-declarative-config/policy-table.yaml
@@ -1,78 +1,88 @@
----
-# Rylan Policy Table v5.0 - Zero-Trust Allows Only (7 rules)
+# Trinity Ministries Policy Table v5.1 — Suehring immutable 10-rule cap
+# Hardware offload budget: 10 rules (USG-3P). Do not exceed.
+metadata:
+  author: "Trinity Ministries (Suehring)"
+  version: "v5.1"
+  rule_budget: 10
+  hardware: "USG-3P"
+  notes: "Immutable perimeter: guest isolation, VLAN QoS, DHCP detection"
+
 rules:
-  - description: "Management → Everywhere (controller + SSH)"
-    source:
-      network: "Management"
-    destination:
-      type: "any"
-    action: "accept"
-    ports: ["22", "443", "8443", "161"]
+  - id: 1
+    name: guest-to-internet
+    description: "Guest/IoT (VLAN 90) to WAN only"
+    source: { vlan: 90 }
+    destination: { type: wan }
+    action: accept
 
-  - description: >-
-      trusted-devices → servers (DNS, AD, NFS, Influx, PXE)
-    source:
-      network: "trusted-devices"
-    destination:
-      network: "servers"
-    action: "accept"
-    ports: ["53", "67", "68", "69", "88", "389", "636", "2049",
-            "4011", "8086"]
-    comment: "Consolidated server access including PXE boot"
+  - id: 2
+    name: guest-to-local-drop
+    description: "Block guest/IoT to internal VLANs 10/30/40"
+    source: { vlan: 90 }
+    destination: { vlans: [10, 30, 40] }
+    action: drop
 
-  - description: "trusted-devices → voip (SIP + RTP)"
-    source:
-      network: "trusted-devices"
-    destination:
-      network: "voip"
-    action: "accept"
-    ports: ["5060-5061", "10000-20000"]
+  - id: 3
+    name: servers-nfs
+    description: "Servers (VLAN 10) NFS backups"
+    source: { vlan: 10 }
+    destination: { vlan: 10, ports: [2049] }
+    protocol: tcp
+    action: accept
 
-  - description: "servers → osTicket (AI triage polling)"
-    source:
-      network: "servers"
-      address: "10.0.10.60"
-    destination:
-      address: "10.0.30.40"
-      ports: ["80", "443"]
-    action: "accept"
+  - id: 4
+    name: dns-dhcp-mgmt
+    description: "DNS/DHCP to mgmt (VLAN 1)"
+    source: { vlans: [10, 30, 40, 90] }
+    destination: { vlan: 1, ports: [53, 67, 68] }
+    protocol: udp
+    action: accept
 
-  - description: "voip → servers (FreePBX → AD auth)"
-    source:
-      network: "voip"
-    destination:
-      network: "servers"
-      ports: ["389", "636"]
-    action: "accept"
+  - id: 5
+    name: voip-rtp
+    description: "VoIP RTP EF/DSCP 46 priority"
+    source: { vlan: 40 }
+    destination: { vlan: 10, port_range: "10000-20000" }
+    protocol: udp
+    dscp: 46
+    action: accept
 
-  - description: "guest-iot → WAN only (block local)"
-    source:
-      network: "guest-iot"
-    destination:
-      type: "internet"
-    action: "accept"
+  - id: 6
+    name: mgmt-ssh
+    description: "Mgmt/Servers/Trusted SSH to Servers"
+    source: { vlans: [1, 10, 30] }
+    destination: { vlan: 10, ports: [22] }
+    protocol: tcp
+    action: accept
 
-  - description: "guest-iot → local (drop everything else)"
-    source:
-      network: "guest-iot"
-    destination:
-      type: "local"
-    action: "drop"
+  - id: 7
+    name: trusted-services
+    description: "Trusted (30) to Services (10/40)"
+    source: { vlan: 30 }
+    destination: { vlans: [10, 40], ports: [443, 3000, 5000] }
+    protocol: tcp
+    action: accept
 
-  - description: "IoT-Isolated → Internet (Whitelist)"
-    source:
-      network: "iot-isolated"
-    destination:
-      type: "internet"
-    action: "accept"
-    ports: ["443", "8883"]
-    comment: "Traeger grill cloud access only (TLS + MQTT over TLS)"
+  - id: 8
+    name: voip-sip
+    description: "VoIP SIP signaling"
+    source: { vlan: 40 }
+    destination: { vlan: 10, ports: [5060, 5061] }
+    protocol: tcp
+    action: accept
 
-  - description: "IoT-Trusted → Streaming Services"
-    source:
-      network: "iot-trusted"
-    destination:
-      type: "internet"
-    action: "accept"
-    ports: ["80", "443"]
-    comment: "Denon HEOS soundbars - Spotify/Pandora/HEOS cloud"
+  - id: 9
+    name: rogue-dhcp-detect
+    description: "DHCP detection (logged)"
+    source: { vlans: [10, 30, 40, 90] }
+    destination: { vlan: 1, ports: [67] }
+    protocol: udp
+    logging: true
+    action: accept
+
+  - id: 10
+    name: default-drop
+    description: "Default drop (implicit deny, hardware offload)"
+    source: { any: true }
+    destination: { any: true }
+    action: drop
