--- a/shared/inventory.yaml
+++ b/shared/inventory.yaml
@@ -28,8 +28,8 @@ iot_devices:
     cloud_dependencies: ["heos.denon.com", "spotify.com", "pandora.com"]
     update_mechanism: "OTA via HEOS app"
     encryption: "TLS 1.2 for cloud, mDNS local"
-    connection_type: "Hardwired US-8 Port 2 (VLAN 96 iot-trusted)"
-    notes: "Ethernet center termination, semi-trusted, requires mDNS reflector"
+    connection_type: "Hardwired US-8 Port 2 (VLAN 90 guest-iot)"
+    notes: "Ethernet center termination, moved to VLAN 90 — WAN-only isolation"
 
   - device_name: "Denon HEOS E400 Soundbar"
     mac_address: "<TBD-Week1>"
@@ -41,8 +41,8 @@ iot_devices:
     cloud_dependencies: ["heos.denon.com", "spotify.com", "pandora.com"]
     update_mechanism: "OTA via HEOS app"
     encryption: "TLS 1.2 for cloud, mDNS local"
-    connection_type: "Hardwired US-8 Port 2 (VLAN 96 iot-trusted)"
-    notes: "Ethernet center termination, semi-trusted, requires mDNS reflector"
+    connection_type: "Hardwired US-8 Port 2 (VLAN 90 guest-iot)"
+    notes: "Ethernet center termination, moved to VLAN 90 — WAN-only isolation"
 
   - device_name: "Network Printer"
     mac_address: "<TBD-Week1>"
