fix(ci-workflow): use 'bash' prefix for script invocation
Fix permission denied errors in CI by explicitly invoking bash instead of
relying on executable bit detection. GitHub Actions runners may not properly
preserve or respect git file modes, causing 'Permission denied' errors even
when scripts are marked as 100755.

Changed:
  ./scripts/validate-bash.sh  bash ./scripts/validate-bash.sh
  ./scripts/validate-python.sh  bash ./scripts/validate-python.sh
  ./validate-isolation.sh  bash ./validate-isolation.sh
  ./eternal-resurrect.sh  bash ./eternal-resurrect.sh

This ensures scripts execute regardless of file mode state in CI environment.

--- a/.github/workflows/ci-validate.yaml
+++ b/.github/workflows/ci-validate.yaml
@@ -39,7 +39,7 @@ jobs:
         shell: bash
       
       - name: Run validate-bash.sh
-        run: ./scripts/validate-bash.sh
+        run: bash ./scripts/validate-bash.sh
         shell: bash
 
   lint-python:
@@ -58,7 +58,7 @@ jobs:
           pip install ruff mypy bandit pytest pytest-cov
       
       - name: Run validate-python.sh
-        run: ./scripts/validate-python.sh
+        run: bash ./scripts/validate-python.sh
         shell: bash
 
   test-python:
@@ -96,7 +96,7 @@ jobs:
       - name: Validate VLAN isolation (CI mode)
         run: |
           cd 03-validation-ops
-          CI_MODE=1 ./validate-isolation.sh
+          CI_MODE=1 bash ./validate-isolation.sh
         shell: bash
       
       - name: Validate firewall policy (<=10 rules)
@@ -125,7 +125,7 @@ jobs:
           export UNIFI_PASS="mock-pass"
           
           # Execute orchestrator in DRY_RUN mode
-          DRY_RUN=1 ./eternal-resurrect.sh || {
+          DRY_RUN=1 bash ./eternal-resurrect.sh || {
             echo "❌ Orchestrator failed smoke test"
             exit 1
           }
