--- a/.github/workflows/ci-validate.yaml
+++ b/.github/workflows/ci-validate.yaml
@@ -52,10 +52,11 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       
-      - name: Install linters
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install ruff mypy bandit pytest pytest-cov
+          pip install -r requirements.txt || true
       
       - name: Run validate-python.sh
         run: bash ./scripts/validate-python.sh
