fix(ci): add CI_MODE=1 to eternal-ci.yml network validation
- VLAN isolation test requires CI_MODE=1 to skip live nmap in GitHub Actions
- eternal-ci.yml was missing this flag unlike ci-validate.yaml
- Prevents network connectivity errors in CI environment

Fixes: https://github.com/T-Rylander/rylan-unifi-case-study/actions/runs/20055990034/job/57521279741

--- a/.github/workflows/eternal-ci.yml
+++ b/.github/workflows/eternal-ci.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Validate network isolation (simulated)
         run: |
           if [ -f "03-validation-ops/validate-isolation.sh" ]; then
-            sudo bash 03-validation-ops/validate-isolation.sh
+            CI_MODE=1 sudo bash 03-validation-ops/validate-isolation.sh
           fi
 
       - name: Summary
