feat(proxmox): integrate Leo's VM ascension  cloud-init + CD-ROM eject (bootstrap shim)
Leo's production-ready Proxmox VM ascension script now integrated into T3-ETERNAL v.3.2:

Scripts:
- vm-cloudinit-eject.sh: Bootstrap VM (100) with cloud-init, auto-eject CD-ROM post-provision
  * Preflight validation (ISO + user-data)
  * Cloud-init polling (120s timeout)
  * CD-ROM eject to prevent boot loops
  * Whitaker nmap check (top 100 ports, fail if >6 open)
  * QM_BIN/NMAP_BIN overrides for testing
  * MAX_OPEN_PORTS threshold tuning
  * CI_MODE=1 skips live Proxmox/nmap

- fetch-cloud-init-iso.sh: Stage Ubuntu 24.04 cloud-init ISO
  * wget download with optional SHA256 verification (ISO_SHA256 env)
  * Idempotent (exits if ISO present + checksum valid)
  * CI_MODE=1 bypass

- simulate-breach-vm.sh: Post-deploy nmap validation
  * Top 100 port scan on target VM IP
  * EXPECTED_MAX_OPEN threshold (default: 6)
  * CI_MODE=1 bypass for GitHub Actions

Integration:
- eternal-resurrect.sh: Added phase_leo_proxmox_vm between Bauer and Beale
  * Fetches cloud-init ISO
  * Spins VM 100 (PXE server, chicken-egg bootstrap)
  * Idempotent + DRY_RUN support

- ci-validate.yaml: Added CI dry-run step
  * CI_MODE=1 invokes new scripts without live Proxmox
  * Validates syntax + nmap logic in GitHub Actions

Documentation:
- scripts/01-proxmox-hardening/README.md: 19-line overview
- docs/GROK-LEO-PROMPT.md: Archived Grok prompt (source of truth)

The VMs ascend without loops. The bootstrap is eternal.
The ride is eternal.

--- a/.github/workflows/ci-validate.yaml
+++ b/.github/workflows/ci-validate.yaml
@@ -105,6 +105,12 @@ jobs:
           cd 03-validation-ops
           CI_MODE=1 bash ./validate-isolation.sh
         shell: bash
+
+      - name: Dry-run Proxmox VM ascension (CI mode)
+        run: |
+          CI_MODE=1 bash ./scripts/01-proxmox-hardening/vm-cloudinit-eject.sh 100
+          CI_MODE=1 bash ./scripts/01-proxmox-hardening/simulate-breach-vm.sh 10.0.10.100
+        shell: bash
       
       - name: Validate firewall policy (<=10 rules)
         run: |
