fix(consciousness-guardian): robust tag parsing and numeric version comparisons (Bug 1/2)

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,11 @@ secrets/
 !runbooks/ministry-bauer/
 !runbooks/ministry-perimeter/
 
+# BUT allow modular library directories
+!scripts/lib/
+!01_bootstrap/proxmox/lib/
+!runbooks/ministry_detection/lib/
+
 # UniFi backups
 *.unf
 
