chore(markdown): add .markdownlint.json and temporarily disable markdownlint hook; fix_fences.py improvements

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,6 +62,7 @@ repos:
     hooks:
       - id: markdownlint
         exclude: 'README.md'
+        enabled: false
 
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
