chore(tests/unifi): prodify test_unifi_client, add type stubs and typing fixes
- add autouse sys.path fixture and harden tests
- add error, ssl, logging, and security tests
- register pytest 'unit' marker in pyproject.toml
- add requirements-dev.txt with type stubs
- fix typing issues in shared/unifi_client.py and shared/auth.py

Guardian: Carter | Bauer | Beale

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "5.0.0"
 testpaths = ["tests"]
 addopts = "-ra"
 cache_dir = ".pytest_cache"
+markers = ["unit: mark a test as a fast unit test"]
 
 # Bandit configuration
 [tool.bandit]
